--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
   html, body, #map { height:100%; margin:0; background:#052D1F; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif; }
 
   /* ===== Top controls ===== */
-  .control-bar{
-    position:absolute; z-index:9999; top:12px; left:12px; right:12px;
-    display:flex; gap:8px; flex-wrap:wrap; align-items:center;
-  }
+  .control-bar{ position:absolute; z-index:9999; top:12px; left:12px; right:12px; display:flex; gap:8px; flex-wrap:wrap; align-items:center; }
   .control{
     display:flex; gap:8px; align-items:center;
     background:rgba(8,52,36,.92); color:#e9f4ef; border:1px solid rgba(0,0,0,.35);
@@ -32,13 +29,10 @@
     border-radius:12px; padding:6px 10px; box-shadow:0 8px 18px rgba(0,0,0,.35);
     max-width:320px; min-width:220px;
   }
-  .search input{
-    width:100%; border:none; outline:none; background:transparent; color:#e9f4ef;
-    font:600 14px/1.2 system-ui;
-  }
+  .search input{ width:100%; border:none; outline:none; background:transparent; color:#e9f4ef; font:600 14px/1.2 system-ui; }
   .search input::placeholder{ color:#b6d1c7 }
 
-  /* ===== Golf-ball clusters (realistic) ===== */
+  /* ===== Golf-ball clusters ===== */
   .marker-cluster{ border-radius:50% }
   .marker-cluster div{
     position:relative; display:grid; place-items:center; border-radius:50%;
@@ -77,17 +71,33 @@
   .btn{ padding:8px 12px; border-radius:10px; border:1px solid rgba(255,255,255,.15); background:#083424; color:#fff; text-decoration:none; font-weight:700 }
   .btn:hover{ filter:brightness(1.08) }
 
-  /* ===== Top media (thumbnail + optional logo badge) ===== */
+  /* ===== Top media ===== */
   .thumb{ position:relative; width:100%; aspect-ratio:16/9; border-radius:12px; overflow:hidden; border:1px solid rgba(255,255,255,.15); margin:6px 0 10px; background:#0c1f18 }
-  .thumb img.main{ width:100%; height:100%; object-fit:cover; display:block }
+  .thumb img.main{
+    width:100%; height:100%; object-fit:cover; display:block;
+    image-rendering:auto; /* default for photos */
+  }
+
+  /* Logo-only mode: shorter height, contain inside box (no stretching) */
+  .thumb.logo-only{
+    aspect-ratio:auto; height:160px; display:flex; align-items:center; justify-content:center;
+    background:#0f221b;
+  }
+  .thumb img.main.logo-only{
+    width:auto; max-width:100%; max-height:100%;
+    object-fit:contain; padding:10px;
+    image-rendering:-webkit-optimize-contrast;
+    image-rendering:crisp-edges; /* fallback */
+  }
+
+  /* Round logo badge when both image + logo exist */
   .logo-badge{ position:absolute; right:8px; bottom:8px; width:56px; height:56px; border-radius:50%; overflow:hidden; background:#fff; border:1px solid rgba(255,255,255,.65); box-shadow:0 6px 14px rgba(0,0,0,.35), inset 0 1px 2px rgba(0,0,0,.08) }
   .logo-badge img{ width:100%; height:100%; object-fit:contain; background:#fff; display:block; padding:6px }
 
   /* ===== Gold Top-100 Badge ===== */
   .badge-top100{
     --g1:#f7d776; --g2:#dcb247; --g3:#b9902d;
-    display:inline-flex; align-items:center; gap:6px;
-    padding:6px 10px; border-radius:999px;
+    display:inline-flex; align-items:center; gap:6px; padding:6px 10px; border-radius:999px;
     background:linear-gradient(145deg,var(--g1),var(--g2) 55%,var(--g3));
     color:#111; font-weight:800; letter-spacing:.2px; line-height:1;
     box-shadow:0 0 0 1px rgba(255,255,255,.25) inset,0 2px 6px rgba(0,0,0,.4)
@@ -179,7 +189,7 @@
     const idx = {};
     for(const k in row) idx[normKey(k)] = k;
 
-    // 1) exact-ish alias match
+    // 1) alias or near-alias match
     for(const a of aliases){
       const nk = normKey(a);
       if(idx[nk] != null){
@@ -197,7 +207,7 @@
     return "";
   }
 
-  // Hawaii tuck to keep HI in view
+  // Hawaii tuck
   function hawaiiTuck(lat, lon){
     if(lat>=18 && lat<=23 && lon<=-154 && lon>=-162){ return [lat+15.5, lon+37]; }
     return [lat,lon];
@@ -207,13 +217,13 @@
     return `<div class="badge-top100"><span class="label">Top&nbsp;100</span><span class="rank">#${rank}</span></div>`;
   }
 
-  // ===== Media block (thumbnail + optional logo badge) =====
+  // ===== Media block =====
   function mediaBlock(r){
     const thumb = findImage(
       r,
       [
         "thumbnail_url","thumbnail url","thumb_url","thumb url",
-        "thumbail_url","thumbail url",           /* common typo */
+        "thumbail_url","thumbail url",
         "image_url","image url","image",
         "thumbnail_url(linked","thumbnail_url(linked)","image_url(linked","image_url(linked)"
       ],
@@ -229,22 +239,29 @@
       /logo/i
     );
 
-    if (!thumb && !logo) return "";
+    // Thumbnail + optional logo badge
+    if (thumb && logo){
+      return `<div class="thumb">
+        <img class="main" src="${thumb}" alt="" loading="lazy" onerror="this.closest('.thumb')?.remove()"/>
+        <div class="logo-badge"><img src="${logo}" alt="" loading="lazy" onerror="this.closest('.logo-badge')?.remove()"/></div>
+      </div>`;
+    }
 
-    if (thumb && !logo) {
+    // Only thumbnail -> full photo
+    if (thumb){
       return `<div class="thumb">
         <img class="main" src="${thumb}" alt="" loading="lazy" onerror="this.closest('.thumb')?.remove()"/>
       </div>`;
     }
-    if (!thumb && logo) {
-      return `<div class="thumb">
-        <img class="main" src="${logo}" alt="" loading="lazy" onerror="this.closest('.thumb')?.remove()"/>
+
+    // Only logo -> compact, contain (crisper)
+    if (logo){
+      return `<div class="thumb logo-only">
+        <img class="main logo-only" src="${logo}" alt="" loading="lazy" onerror="this.closest('.thumb')?.remove()"/>
       </div>`;
     }
-    return `<div class="thumb">
-      <img class="main" src="${thumb}" alt="" loading="lazy" onerror="this.closest('.thumb')?.remove()"/>
-      <div class="logo-badge"><img src="${logo}" alt="" loading="lazy" onerror="this.closest('.logo-badge')?.remove()"/></div>
-    </div>`;
+
+    return "";
   }
 
   function popupHtml(r){
