--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <style>
   html,body,#map{height:100%;margin:0;background:#052D1F;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;}
 
+  /* Slightly soften the basemap so pins & badges pop */
+  .leaflet-tile-pane img{ filter: brightness(0.95) contrast(0.95) saturate(0.85); }
+
   /* ==== Controls stacked under zoom ==== */
   .control-bar{
     position:absolute;z-index:9999;top:90px;left:12px;
@@ -41,10 +44,9 @@
   .search button.clear{
     position:absolute;right:8px;top:50%;transform:translateY(-50%);
     background:none;border:none;color:#b6d1c7;font-size:18px;cursor:pointer;
-    width:22px;height:22px;line-height:18px;border-radius:6px;
-    display:none;
+    width:22px;height:22px;line-height:18px;border-radius:6px;display:none;
   }
-  .search button.clear:hover{background:rgba(255,255,255,.1);color:#fff}
+  .search button.clear:hover{background:rgba(255,255,255,.12);color:#fff}
   .search.has-text button.clear{display:block;}
 
   /* ==== Cluster ball ==== */
@@ -79,20 +81,9 @@
   /* ==== Media (thumb/logo) ==== */
   .thumb{position:relative;width:100%;aspect-ratio:16/9;border-radius:12px;overflow:hidden;border:1px solid rgba(255,255,255,.15);margin:6px 0 10px;background:#0c1f18}
   .thumb img.main{width:100%;height:100%;object-fit:cover;display:block;image-rendering:auto}
-
-  /* ✅ Logo-only: white background + smaller height + no upscaling (sharper) */
-  .thumb.logo-only{
-    aspect-ratio:auto;height:140px;               /* was 160px */
-    display:flex;align-items:center;justify-content:center;
-    background:#ffffff;                            /* white backing for dark logos */
-    border:1px solid rgba(0,0,0,.12);
-  }
-  .thumb img.main.logo-only{
-    width:auto;max-width:100%;max-height:100%;     /* never upscale beyond natural size */
-    object-fit:contain;padding:8px;
-    image-rendering:-webkit-optimize-contrast;
-    image-rendering:crisp-edges;
-  }
+  /* Logo-only: white pad + smaller height for sharpness */
+  .thumb.logo-only{aspect-ratio:auto;height:140px;display:flex;align-items:center;justify-content:center;background:#fff;border:1px solid rgba(0,0,0,.12)}
+  .thumb img.main.logo-only{width:auto;max-width:100%;max-height:100%;object-fit:contain;padding:8px;image-rendering:-webkit-optimize-contrast;image-rendering:crisp-edges}
 
   .logo-badge{position:absolute;right:8px;bottom:8px;width:56px;height:56px;border-radius:50%;overflow:hidden;background:#fff;border:1px solid rgba(255,255,255,.65);box-shadow:0 6px 14px rgba(0,0,0,.35),inset 0 1px 2px rgba(0,0,0,.08)}
   .logo-badge img{width:100%;height:100%;object-fit:contain;background:#fff;display:block;padding:6px}
@@ -133,14 +124,18 @@ const params = new URLSearchParams(window.location.search);
 const CSV_URL = params.get("csv") || "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-nZvG7m9sUkOu0spxVTVGcM311qlgGSjnFgRDQr-l6nfs1cPFNrGBXO0ZDzMIQg/pub?gid=1171293634&single=true&output=csv";
 
 const map = L.map("map", {
-  center:[37.5,-105], zoom:4.1, minZoom:3.5, maxZoom:14,
+  center:[37.5,-105], zoom:4.1,
+  minZoom:3.5, maxZoom:12,           // tighter max zoom
   zoomSnap:0.5, zoomDelta:0.5, inertia:false,
   scrollWheelZoom:true, doubleClickZoom:false,
   maxBounds:[[7,-170],[72,-50]], maxBoundsViscosity:0.8
 });
 
-L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-  maxZoom:18, attribution:"&copy; OpenStreetMap contributors"
+/* Carto Light basemap */
+L.tileLayer("https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png", {
+  maxZoom: 20,
+  subdomains: "abcd",
+  attribution: "&copy; OpenStreetMap contributors & CartoDB"
 }).addTo(map);
 
 /* ===== Cluster group ===== */
@@ -213,7 +208,6 @@ function mediaBlock(r){
     </div>`;
   }
   if (logo){
-    /* logo-only block: white background + reduced height + crisp scaling */
     return `<div class="thumb logo-only">
       <img class="main logo-only" src="${logo}" alt="" loading="lazy" onerror="this.closest('.thumb')?.remove()"/>
     </div>`;
@@ -352,12 +346,13 @@ searchBox.addEventListener("keydown", e=>{ if(e.key==="Enter"){ e.preventDefault
 clearBtn.addEventListener("click", ()=>{ searchBox.value=""; updateClear(); applyFilters(); });
 
 /* ===== Cluster hover: show resort names/counts ===== */
+function getResort(row){
+  return (row["course_resort"] || row["course resort"] || row["resort"] || "").trim();
+}
 clusterLayer.on("clustermouseover", (e) => {
-  const layer = e.layer;
   const counts = new Map();
-  layer.getAllChildMarkers().forEach(m => {
-    const row = rowByMarker.get(m) || {};
-    const nm = (row["course_resort"] || row["course resort"] || row["resort"] || "").trim();
+  e.layer.getAllChildMarkers().forEach(m => {
+    const nm = getResort(rowByMarker.get(m) || {});
     if(nm){ counts.set(nm, (counts.get(nm) || 0) + 1); }
   });
 
@@ -366,12 +361,13 @@ clusterLayer.on("clustermouseover", (e) => {
     text = [...counts.keys()][0];
   } else if (counts.size > 1){
     const parts = [...counts.entries()].sort((a,b)=>b[1]-a[1]).slice(0,3).map(([n,c])=>`${n} (${c})`);
-    text = parts.join(", "); if (counts.size > 3) text += " …";
+    text = parts.join(", ");
+    if (counts.size > 3) text += " …";
   } else {
-    text = `${layer.getChildCount()} courses`;
+    text = `${e.layer.getChildCount()} courses`;
   }
 
-  layer.bindTooltip(text, { className:"ga-tooltip", direction:"top", offset:[0,-2], opacity:.95 }).openTooltip();
+  e.layer.bindTooltip(text, { className:"ga-tooltip", direction:"top", offset:[0,-2], opacity:.95 }).openTooltip();
 });
 clusterLayer.on("clustermouseout", (e) => e.layer.closeTooltip());
 </script>
