--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ const CSV_URL = params.get("csv") || "https://docs.google.com/spreadsheets/d/e/2
 
 const map = L.map("map", {
   center:[37.5,-105], zoom:4.1,
-  minZoom:3.5, maxZoom:12,           // tighter max zoom
+  minZoom:3.5, maxZoom:13,           // ✅ one level closer
   zoomSnap:0.5, zoomDelta:0.5, inertia:false,
   scrollWheelZoom:true, doubleClickZoom:false,
   maxBounds:[[7,-170],[72,-50]], maxBoundsViscosity:0.8
@@ -138,14 +138,14 @@ L.tileLayer("https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png", {
   attribution: "&copy; OpenStreetMap contributors & CartoDB"
 }).addTo(map);
 
-/* ===== Cluster group ===== */
+/* ===== Cluster group (tuned) ===== */
 const clusterLayer = L.markerClusterGroup({
-  showCoverageOnHover:false, maxClusterRadius:48,
-  iconCreateFunction:c=>{
-    const n = c.getChildCount(); let cls="small"; if(n>=50) cls="large"; else if(n>=10) cls="medium";
-    return L.divIcon({ html:`<div><span>${n}</span></div>`, className:`marker-cluster marker-cluster-${cls}`, iconSize:L.point(64,64) });
-  }
-}).addTo(map);
+  showCoverageOnHover:false,
+  maxClusterRadius:42,             // ✅ spreads a bit sooner
+  disableClusteringAtZoom:13,      // ✅ uncluster at the new max zoom
+  spiderfyDistanceMultiplier:1.2   // ✅ more separation when overlapping
+});
+map.addLayer(clusterLayer);
 
 /* ===== Pin icon ===== */
 const pinSvg = `<svg xmlns='http://www.w3.org/2000/svg' width='42' height='46' viewBox='0 0 42 46'>
